// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TinyMceEditor snapshots ImageUploadModal is not rendered 1`] = `
<Fragment>
  <SourceCodeModal
    close={[MockFunction modal.closeModal]}
    editorRef={
      Object {
        "current": Object {
          "value": "something",
        },
      }
    }
    isOpen={false}
  />
  <Editor
    editorConfig={
      Object {
        "clearSelection": [MockFunction hooks.selectedImage.clearSelection],
        "editorRef": Object {
          "current": Object {
            "value": "something",
          },
        },
        "editorType": "text",
        "images": Array [
          Object {
            "staTICUrl": "/assets/sOmEaSsET",
          },
        ],
        "isLibrary": true,
        "lmsEndpointUrl": "sOmEvaLue.cOm",
        "openImgModal": [MockFunction modal.openModal],
        "openSourceCodeModal": [MockFunction modal.openModal],
        "setSelection": [MockFunction hooks.selectedImage.setSelection],
        "studioEndpointUrl": "sOmEoThERvaLue.cOm",
      }
    }
  />
</Fragment>
`;

exports[`TinyMceEditor snapshots SourcecodeModal is not rendered 1`] = `
<Fragment>
  <ImageUploadModal
    clearSelection={[MockFunction hooks.selectedImage.clearSelection]}
    close={[MockFunction modal.closeModal]}
    editorRef={
      Object {
        "current": Object {
          "value": "something",
        },
      }
    }
    images={
      Array [
        Object {
          "staTICUrl": "/assets/sOmEaSsET",
        },
      ]
    }
    isOpen={false}
    selection="hooks.selectedImage.selection"
    setSelection={[MockFunction hooks.selectedImage.setSelection]}
  />
  <Editor
    editorConfig={
      Object {
        "clearSelection": [MockFunction hooks.selectedImage.clearSelection],
        "editorRef": Object {
          "current": Object {
            "value": "something",
          },
        },
        "editorType": "problem",
        "images": Array [
          Object {
            "staTICUrl": "/assets/sOmEaSsET",
          },
        ],
        "isLibrary": false,
        "lmsEndpointUrl": "sOmEvaLue.cOm",
        "openImgModal": [MockFunction modal.openModal],
        "openSourceCodeModal": [MockFunction modal.openModal],
        "setSelection": [MockFunction hooks.selectedImage.setSelection],
        "studioEndpointUrl": "sOmEoThERvaLue.cOm",
      }
    }
  />
</Fragment>
`;

exports[`TinyMceEditor snapshots renders as expected with default behavior 1`] = `
<Fragment>
  <ImageUploadModal
    clearSelection={[MockFunction hooks.selectedImage.clearSelection]}
    close={[MockFunction modal.closeModal]}
    editorRef={
      Object {
        "current": Object {
          "value": "something",
        },
      }
    }
    images={
      Array [
        Object {
          "staTICUrl": "/assets/sOmEaSsET",
        },
      ]
    }
    isOpen={false}
    selection="hooks.selectedImage.selection"
    setSelection={[MockFunction hooks.selectedImage.setSelection]}
  />
  <SourceCodeModal
    close={[MockFunction modal.closeModal]}
    editorRef={
      Object {
        "current": Object {
          "value": "something",
        },
      }
    }
    isOpen={false}
  />
  <Editor
    editorConfig={
      Object {
        "clearSelection": [MockFunction hooks.selectedImage.clearSelection],
        "editorRef": Object {
          "current": Object {
            "value": "something",
          },
        },
        "editorType": "text",
        "images": Array [
          Object {
            "staTICUrl": "/assets/sOmEaSsET",
          },
        ],
        "isLibrary": false,
        "lmsEndpointUrl": "sOmEvaLue.cOm",
        "openImgModal": [MockFunction modal.openModal],
        "openSourceCodeModal": [MockFunction modal.openModal],
        "setSelection": [MockFunction hooks.selectedImage.setSelection],
        "studioEndpointUrl": "sOmEoThERvaLue.cOm",
      }
    }
  />
</Fragment>
`;
